INCLUDE_DIRECTORIES(
  ${HDF5_INCLUDE_DIRS}
  ${MEDFILE_INCLUDE_DIRS}
  ${MEDCOUPLING_INCLUDE_DIR}
  ${MESH_DIR}/inc 
  ${BASE_DIR}/inc 
)

FILE(GLOB src_mesh_CXX . *.cxx)
ADD_LIBRARY(mesh SHARED ${src_mesh_CXX})
SET_TARGET_PROPERTIES(mesh PROPERTIES OUTPUT_NAME "solverlabMesh")
TARGET_LINK_LIBRARIES(mesh base medloader )

INSTALL(TARGETS mesh DESTINATION lib)

