IF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)
    ADD_SUBDIRECTORY(TransportEquation)

    ADD_SUBDIRECTORY(HeatEquation)

    ADD_SUBDIRECTORY(BurgersEquation1D)

    ADD_SUBDIRECTORY(PoissonEquation)

    ADD_SUBDIRECTORY(SpectrumLaplace)

    ADD_SUBDIRECTORY(WaveSystem)

    ADD_SUBDIRECTORY(EulerEquations)

ENDIF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)


