
SET( VALIDATION_FOLDERS
TransportEquation1D/1DTransportUpwindExplicit
TransportEquation1D/1DTransportUpwindImplicit
TransportEquation1D/1DTransportCenteredImplicit
Poisson/2DPoissonEF_Delaunay_triangles
Poisson/2DPoissonEF_flat_cross_triangles 
Poisson/2DPoissonEF_skinny_triangles 
Poisson/2DPoissonEF_StiffBCDisk_delaunay_triangles
Poisson/2DPoissonEF_StiffBCSquare_delaunay_triangles
Poisson/2DPoissonVF_Delaunay_triangles 
Poisson/2DPoissonVF_equilateral_triangles 
Poisson/2DPoissonVF_right_triangles
Poisson/2DPoissonVF_cross_triangles
Poisson/2DPoissonVF_skinny_triangles
Poisson/2DPoissonVF_flat_cross_triangles
Poisson/2DPoissonVF_checkerboard 
Poisson/2DPoissonVF_loc_ref 
Poisson/2DPoissonVF_squares 
Poisson/2DPoissonVF_deformedQuadrangles 
Poisson/2DPoissonVF_hexagons 
Poisson/2DPoissonVF_brickwall
Poisson/2DPoissonVF_long_rectangles
Poisson/2DPoissonVF_StiffBCDisk_delaunay_triangles
Poisson/2DPoissonVF_StiffBCDisk_squares
Poisson/2DPoissonVF_StiffBCDisk_hexagons
Poisson/2DPoissonVF_StiffBCDisk_spiderWeb
Poisson/2DPoissonVF_StiffBCSquare_squares
Poisson/2DPoissonVF_StiffBCSquare_hexagons
Poisson/2DPoissonVF_StiffBCSquare_equilateralTriangles
Poisson/3DSpherePoissonEF 
Poisson/3DTorusPoissonEF 
Poisson/3DCubeSkinPoissonEF 
Poisson/3DPoissonEF 
Poisson/3DPoissonVF_checkerboard 
Poisson/3DPoissonVF_tetrahedra 
Poisson/3DPoissonVF_cubes
AnisotropicDiffusion/2DDiffusionEF_Delaunay_triangles
AnisotropicDiffusion/2DDiffusionEF_flat_cross_triangles 
AnisotropicDiffusion/2DDiffusionEF_skinny_triangles 
AnisotropicDiffusion/2DDiffusionVF_checkerboard 
AnisotropicDiffusion/2DDiffusionVF_loc_ref 
AnisotropicDiffusion/2DDiffusionVF_Delaunay_triangles 
AnisotropicDiffusion/2DDiffusionVF_squares 
AnisotropicDiffusion/2DDiffusionVF_deformedQuadrangles 
AnisotropicDiffusion/2DDiffusionVF_hexagons 
AnisotropicDiffusion/2DDiffusionVF_brickwall
AnisotropicDiffusion/2DDiffusionVF_cross_triangles
AnisotropicDiffusion/2DDiffusionVF_long_rectangles
AnisotropicDiffusion/2DDiffusionVF_skinny_triangles
AnisotropicDiffusion/2DDiffusionVF_flat_cross_triangles
WaveSystem_stationary/2DWaveSystemPStagSquares 
WaveSystem_stationary/2DWaveSystemPStagDelaunayTriangles 
WaveSystem_stationary/2DWaveSystemPStagCrossTriangles 
WaveSystem_stationary/2DWaveSystemPStagFlatCrossTriangles 
WaveSystem_stationary/2DWaveSystemPStagCheckerboard
WaveSystem_stationary/2DWaveSystemPStagBrickWall
WaveSystem_stationary/2DWaveSystemPStagHexagons
WaveSystem_stationary/2DWaveSystemPStagDeformedQuadrangles
WaveSystem_stationary/2DWaveSystemStaggeredSquares 
WaveSystem_stationary/2DWaveSystemCenteredSquares 
WaveSystem_stationary/2DWaveSystemCenteredDelaunayTriangles 
WaveSystem_stationary/2DWaveSystemCenteredCrossTriangles 
WaveSystem_stationary/2DWaveSystemCenteredFlatCrossTriangles 
WaveSystem_stationary/2DWaveSystemCenteredCheckerboard
WaveSystem_stationary/2DWaveSystemCenteredBrickWall
WaveSystem_stationary/2DWaveSystemCenteredHexagons
WaveSystem_stationary/2DWaveSystemCenteredDeformedQuadrangles
WaveSystem_stationary/2DWaveSystemUpwindSquares 
WaveSystem_stationary/2DWaveSystemUpwindDelaunayTriangles 
WaveSystem_stationary/2DWaveSystemUpwindCrossTriangles 
WaveSystem_stationary/2DWaveSystemUpwindFlatCrossTriangles 
WaveSystem_stationary/2DWaveSystemUpwindCheckerboard
WaveSystem_stationary/2DWaveSystemUpwindBrickWall
WaveSystem_stationary/2DWaveSystemUpwindHexagons
WaveSystem_stationary/2DWaveSystemUpwindDeformedQuadrangles
WaveSystem_stationary_DISK/2DWaveSystemUpwindSquares_DISK 
WaveSystem_stationary_DISK/2DWaveSystemCenteredSquares_DISK 
WaveSystem_stationary_DISK/2DWaveSystemPStagSquares_DISK 
WaveSystem_stationary/3DWaveSystemUpwindCubes 
WaveSystem_stationary/3DWaveSystemUpwindTetrahedra 
WaveSystem_stationary_source/2DWaveSystemPStagSquares 
WaveSystem_stationary_source/2DWaveSystemPStagDelaunayTriangles 
WaveSystem_stationary_source/2DWaveSystemPStagCrossTriangles 
WaveSystem_stationary_source/2DWaveSystemPStagFlatCrossTriangles 
WaveSystem_stationary_source/2DWaveSystemPStagCheckerboard
WaveSystem_stationary_source/2DWaveSystemPStagBrickWall
WaveSystem_stationary_source/2DWaveSystemCenteredSquares 
WaveSystem_stationary_source/2DWaveSystemCenteredDelaunayTriangles 
WaveSystem_stationary_source/2DWaveSystemCenteredCrossTriangles 
WaveSystem_stationary_source/2DWaveSystemCenteredFlatCrossTriangles 
WaveSystem_stationary_source/2DWaveSystemCenteredCheckerboard
WaveSystem_stationary_source/2DWaveSystemCenteredBrickWall
WaveSystem_stationary_source/2DWaveSystemUpwindSquares 
WaveSystem_stationary_source/2DWaveSystemUpwindDelaunayTriangles 
WaveSystem_stationary_source/2DWaveSystemUpwindCrossTriangles 
WaveSystem_stationary_source/2DWaveSystemUpwindFlatCrossTriangles 
WaveSystem_stationary_source/2DWaveSystemUpwindCheckerboard
WaveSystem_stationary_source/2DWaveSystemUpwindBrickWall
WaveSystem_stationary_source/2DWaveSystemUpwindHexagons
WaveSystem_stationary_source/2DWaveSystemUpwindDeformedQuadrangles
WaveSystem_LinearSolvers/2DTriangles
WaveSystem_LinearSolvers/2DSquares
ReferenceSolutions/
EulerEquations/1DToroBenchmark
test_synthesis 
)

IF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)

  foreach(dir ${VALIDATION_FOLDERS} )
    ADD_SUBDIRECTORY(${dir})

    install(
      DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${dir}/
      DESTINATION share/validation/${dir}
      FILES_MATCHING PATTERN "*.py"
                     PATTERN "*.med"
                     PATTERN "*_0.vtu"
                     PATTERN "*.json"
    )

    string(FIND ${dir} "2DPoissonVF" is_2DPoissonVF)
    if(NOT ${is_2DPoissonVF} EQUAL -1)
    install(
      DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${dir}/
      DESTINATION share/doc/convergence_tests/2DPoissonVF
      FILES_MATCHING PATTERN "*_SQUARE.ipynb"
                     PATTERN "*_SQUARE.pdf"
    )
    install(
      DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${dir}/
      DESTINATION share/doc/convergence_tests/2DPoissonVF/${dir}
      FILES_MATCHING PATTERN "*.png"
                     PATTERN "*.ipynb"
                     PATTERN "*.py"
                     PATTERN "*.html"
                     PATTERN "*.pdf"
                     PATTERN "*.tex"
                     PATTERN "*.md"
                     PATTERN "*.xlsx"
                     PATTERN "*.csv"
                     PATTERN "*.json"
    )
    endif(NOT ${is_2DPoissonVF} EQUAL -1)
    string(FIND ${dir} "2DWaveSystem" is_2DWaveSystem)
    if(NOT ${is_2DWaveSystem} EQUAL -1)
    install(
      DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${dir}/
      DESTINATION share/doc/convergence_tests/2DWaveSystemVF_stationary
      FILES_MATCHING PATTERN "*_SQUARE.ipynb"
                     PATTERN "*_SQUARE.pdf"
    )
    install(
      DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${dir}/
      DESTINATION share/doc/convergence_tests/2DWaveSystemVF_stationary/${dir}
      FILES_MATCHING PATTERN "*.png"
                     PATTERN "*.ipynb"
                     PATTERN "*.py"
                     PATTERN "*.html"
                     PATTERN "*.pdf"
                     PATTERN "*.tex"
                     PATTERN "*.md"
                     PATTERN "*.xlsx"
                     PATTERN "*.csv"
                     PATTERN "*.json"
    )
    endif(NOT ${is_2DWaveSystem} EQUAL -1)

    string(FIND ${dir} "2DDiffusionVF" is_2DDiffusion)
    if(NOT ${is_2DDiffusion} EQUAL -1)
    install(
      DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${dir}/
      DESTINATION share/doc/convergence_tests/2DAnisotropicDiffusionVF
      FILES_MATCHING PATTERN "*_SQUARE.ipynb"
                     PATTERN "*_SQUARE.pdf"
    )
    install(
      DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/${dir}/
      DESTINATION share/doc/convergence_tests/2DAnisotropicDiffusionVF/${dir}
      FILES_MATCHING PATTERN "*.png"
                     PATTERN "*.ipynb"
                     PATTERN "*.py"
                     PATTERN "*.html"
                     PATTERN "*.pdf"
                     PATTERN "*.tex"
                     PATTERN "*.md"
                     PATTERN "*.xlsx"
                     PATTERN "*.csv"
                     PATTERN "*.json"
    )
    endif(NOT ${is_2DDiffusion} EQUAL -1)
  endforeach(dir)

add_custom_target (
notebook COMMAND 
     jupyter-nbconvert --to notebook --execute ${CMAKE_CURRENT_BINARY_DIR}/test_synthesis/test_synthesis_nbook.ipynb
&&   jupyter-nbconvert --to html     ${CMAKE_CURRENT_BINARY_DIR}/test_synthesis/test_synthesis_nbook.ipynb
&&   jupyter-nbconvert --to pdf      ${CMAKE_CURRENT_BINARY_DIR}/test_synthesis/test_synthesis_nbook.ipynb
&&   jupyter-nbconvert --to latex    ${CMAKE_CURRENT_BINARY_DIR}/test_synthesis/test_synthesis_nbook.ipynb
&&   jupyter-nbconvert --to markdown ${CMAKE_CURRENT_BINARY_DIR}/test_synthesis/test_synthesis_nbook.ipynb

&&   jupyter-nbconvert --to notebook --execute ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_brickwall/Convergence_Poisson_FV5_SQUARE_brickwall.ipynb
&&   jupyter-nbconvert --to html     ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_brickwall/Convergence_Poisson_FV5_SQUARE_brickwall.ipynb
&&   jupyter-nbconvert --to pdf      ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_brickwall/Convergence_Poisson_FV5_SQUARE_brickwall.ipynb
&&   jupyter-nbconvert --to latex    ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_brickwall/Convergence_Poisson_FV5_SQUARE_brickwall.ipynb
&&   jupyter-nbconvert --to markdown ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_brickwall/Convergence_Poisson_FV5_SQUARE_brickwall.ipynb

&&   jupyter-nbconvert --to notebook --execute ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_hexagons/Convergence_Poisson_FV5_SQUARE_hexagons.ipynb
&&   jupyter-nbconvert --to html     ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_hexagons/Convergence_Poisson_FV5_SQUARE_hexagons.ipynb
&&   jupyter-nbconvert --to pdf      ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_hexagons/Convergence_Poisson_FV5_SQUARE_hexagons.ipynb
&&   jupyter-nbconvert --to latex    ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_hexagons/Convergence_Poisson_FV5_SQUARE_hexagons.ipynb
&&   jupyter-nbconvert --to markdown ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_hexagons/Convergence_Poisson_FV5_SQUARE_hexagons.ipynb

&&   jupyter-nbconvert --to notebook --execute ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_squares/Convergence_Poisson_FV5_SQUARE_squares.ipynb
&&   jupyter-nbconvert --to html     ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_squares/Convergence_Poisson_FV5_SQUARE_squares.ipynb
&&   jupyter-nbconvert --to pdf      ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_squares/Convergence_Poisson_FV5_SQUARE_squares.ipynb
&&   jupyter-nbconvert --to latex    ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_squares/Convergence_Poisson_FV5_SQUARE_squares.ipynb
&&   jupyter-nbconvert --to markdown ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_squares/Convergence_Poisson_FV5_SQUARE_squares.ipynb

&&   jupyter-nbconvert --to notebook --execute ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_triangles/Convergence_Poisson_FV5_SQUARE_triangles.ipynb
&&   jupyter-nbconvert --to html     ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_triangles/Convergence_Poisson_FV5_SQUARE_triangles.ipynb
&&   jupyter-nbconvert --to pdf      ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_triangles/Convergence_Poisson_FV5_SQUARE_triangles.ipynb
&&   jupyter-nbconvert --to latex    ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_triangles/Convergence_Poisson_FV5_SQUARE_triangles.ipynb
&&   jupyter-nbconvert --to markdown ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_triangles/Convergence_Poisson_FV5_SQUARE_triangles.ipynb

&&   jupyter-nbconvert --to notebook --execute ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_checkerboard/Convergence_Poisson_FV5_SQUARE_checkerboard.ipynb
&&   jupyter-nbconvert --to html     ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_checkerboard/Convergence_Poisson_FV5_SQUARE_checkerboard.ipynb
&&   jupyter-nbconvert --to pdf      ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_checkerboard/Convergence_Poisson_FV5_SQUARE_checkerboard.ipynb
&&   jupyter-nbconvert --to latex    ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_checkerboard/Convergence_Poisson_FV5_SQUARE_checkerboard.ipynb
&&   jupyter-nbconvert --to markdown ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_checkerboard/Convergence_Poisson_FV5_SQUARE_checkerboard.ipynb

&&   jupyter-nbconvert --to notebook --execute ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_loc_ref/Convergence_Poisson_FV5_SQUARE_loc_ref.ipynb
&&   jupyter-nbconvert --to html     ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_loc_ref/Convergence_Poisson_FV5_SQUARE_loc_ref.ipynb
&&   jupyter-nbconvert --to pdf      ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_loc_ref/Convergence_Poisson_FV5_SQUARE_loc_ref.ipynb
&&   jupyter-nbconvert --to latex    ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_loc_ref/Convergence_Poisson_FV5_SQUARE_loc_ref.ipynb
&&   jupyter-nbconvert --to markdown ${CMAKE_CURRENT_BINARY_DIR}/2DPoissonVF_loc_ref/Convergence_Poisson_FV5_SQUARE_loc_ref.ipynb

)

ENDIF (CDMATH_WITH_PYTHON AND CDMATH_WITH_PETSC AND CDMATH_WITH_POSTPRO)

